[package]
name = "radium_sniper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.32"  
solana-sdk = "1.10.32"     
serde = "1.0"
serde_json = "1.0"
borsh = "0.9.3"
once_cell = "1.10.0"
spl-associated-token-account ="2.3.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
solana-transaction-status ="1.18.0"
regex = "1"